Fix toolbar spacing issues (#343)
Fixes:
1625-fix-spacing-in-toolbar-for-comparison
1650-fix-gap-between-view-and-add-to-comparison-when-no-filter-is-selected

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,10 +50,6 @@
     border-bottom: 3px solid #0066CC;
   }
 
-  .state-filter-dropdown {
-    min-width: 160px;
-  }
-
   .state-filter-checkbox {
     padding-left: 10px;
   }
@@ -298,16 +294,6 @@
     margin-bottom: 30px;
   }
 
-  .button-margin {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-
-  .export-button-margin {
-    margin-left: 20px;
-    margin-top: 5px;
-  }
-
   .margin-right {
     margin-right: 30px;
   }
@@ -347,10 +333,6 @@
 
   .display-block {
     display: block;
-  }
-
-  .add-system-button {
-    margin-left: 10px;
   }
 }
 
